--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1077,7 +1077,7 @@ h2 {
     margin-bottom: 0px;
     box-shadow:2px 0px 2px #f2f2f2;
     border-radius: 5px 5px 0 0;
-    background-color: #f2f2f2;
+    /* background-color: #f2f2f2; */
     z-index: 99;
 }
 
