--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1087,8 +1087,8 @@ h2 {
     margin-top: 0px;
     padding-right: 8px;
     display: inline-block;
-    box-shadow: 2px 2px 10px #f2f2f2;
-    border: solid 1px #f2f2f2;
+    /* box-shadow: 2px 2px 10px #f2f2f2; */
+    border: solid 1px grey;
     border-top: solid 1px white;
     border-radius: 0  0 5px 5px;
 }
