--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1088,7 +1088,7 @@ h2 {
     padding-right: 8px;
     display: inline-block;
     /* box-shadow: 2px 2px 10px #f2f2f2; */
-    border: solid 1px grey;
+    border: solid 1px #ccc;
     border-top: solid 1px white;
     border-radius: 0  0 5px 5px;
 }
