--- a/client/src/style.css
+++ b/client/src/style.css
@@ -832,10 +832,10 @@ h2 {
   margin-bottom: 10px;
 }
 
-.sjpp-controls-table tr:hover {
+.sjpp-controls-table > tr:hover {
   /*font-weight: 600;*/
   text-shadow:0px 0px 0.5px black;
-background-color: rgba(239, 236, 149, 0.389);
+  background-color: rgba(239, 236, 149, 0.389);
 }
 
 .sja_edit_btn {
